# zuri

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  concepts.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/zuri/: __init__.py
tests/: __init__.py  test_zuri.py
