[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zuri"
version = "0.1.0"
description = "Posterior distributions for common ML metrics"
readme = "README.rst"
authors = [
  {name = "Chuck-Hou Yee", email = "chuckyee@gmail.com"}
]
maintainers = [
  {name = "Chuck-Hou Yee", email = "chuckyee@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/chuckyee/zuri/issues"
changelog = "https://github.com/chuckyee/zuri/blob/master/changelog.md"
homepage = "https://github.com/chuckyee/zuri"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

